# sdl-overview

./: .clang-format  .clang-tidy  .doxygen  .editorconfig  .env  .gitignore  .gitmodules  .grazie.en.yaml  .valgrindrc  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  main.cpp
.github/workflows/: arch-latest.yml  build_ubuntu_latest.yml
cmake/: CPM.cmake  init_cpm_packages.cmake  package_manager.cmake
scripts/: view_docs.sh
src/: main.cxx  main.hxx
test/: CMakeLists.txt  sdl_compilation.cxx
